--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Todo</h1>
+<div class="row">
+	<div class="col-xs-10 col-xs-offset-1">
+		<%= link_to 'Back', todos_path, class: "btn btn-link btn-back" %>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-xs-10 col-xs-offset-1">
+		<h1>Editing task</h1>
+	</div>
+</div>
 
 <%= render 'form', todo: @todo %>
-
-<%= link_to 'Show', @todo %> |
-<%= link_to 'Back', todos_path %>
